--- a/style.css
+++ b/style.css
@@ -34,14 +34,13 @@ nav {
 
 .logo {
     width: 140px;
-    border-radius: 5px;
 }
 
 nav ul li {
     display: inline-block;
     flex-direction: column-reverse;
-     list-style: none;
-     margin: 10px 20px;
+    list-style: none;
+    margin: 10px 20px;
 }
 
 nav ul li a {
@@ -49,6 +48,7 @@ nav ul li a {
     text-decoration: none;
     font-size: 18px;
     position: relative;
+
 }
 
 nav ul li a::after {
@@ -370,14 +370,15 @@ form .btn2 {
     color: #ff004f;
 }
 
-nav .fas {
+.burger {
     display: none;
 }
 
+
 /* ------------------css for small screens----------------- */
 @media only screen and (max-width: 600px) {
-    .header {
-        background-image: url(img/phone-background.png);
+    #header {
+        background-image: url('img/phone-background.png');
     }
 
     .header-text {
@@ -389,33 +390,26 @@ nav .fas {
         font-size: 30px;
     }
 
-    nav .fas {
-        display: block;
-        font-size: 25px;
-    }
-
     nav ul {
         background: #ff004f;
-        position: fixed;
+        position: absolute;
         top: 0;
-        right: 0;
-        width: 200px;
+        right: -100%;
+        width: 55%;
         height: 100vh;
         padding-top: 50px;
         z-index: 2;
-        transition: right 0.5s;
+        transition: right 0.3s;
+    }
+
+    nav ul.active {
+        right: 0;
+        transition: 0.3s ease-in-out;
     }
 
     nav ul li { 
         display: block;
         margin: 25px;
-    }
-
-    nav ul .fas {
-        position: absolute;
-        top: 25px;
-        left: 25px;
-        cursor: pointer;
     }
 
     .subtitle {
@@ -441,5 +435,62 @@ nav .fas {
 
     .contact-left, .contact-right {
         flex-basis: 100%;
+    }
+
+    .burger {
+        display: inline-block;
+        padding: 5px;
+        z-index: 5;
+        cursor: pointer;
+    }
+
+    .burger .bar {
+        display: block;
+        background: #fff;
+        border-top-right-radius: 50%;
+        height: 3px;
+        width: 25px;
+        margin-top: 3px;
+        transition: all 0.3s;
+    }
+
+    .burger.active .bar:nth-child(1) {
+        transform: rotate(90deg) translateX(8px) translateY(5px);
+        border-top-right-radius: 0;
+        height: 4px;
+    }
+
+    .burger.active .bar:nth-child(2) {
+        transform: rotate(-45deg) translateX(7px) translateY(2px);
+        width: 16px;
+        height: 5px;
+    }
+
+    .burger.active .bar:nth-child(3) {
+        transform: rotate(40deg)translateY(-5px) translateX(5px);
+        width: 18px;
+        height: 5px;
+    }
+
+    .blocker {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        background: #262626;
+        opacity: 0;
+        display: none;
+        transition: 0.3s;
+    }
+
+    .blocker.active {
+        background: #262626;
+        display: block;
+        opacity: 0.3;
+    }
+
+    body.freeze {
+        overflow: hidden;
     }
 }
